[gd_scene load_steps=4 format=3 uid="uid://c8u4rgsbtnlkc"]

[ext_resource type="PlaneMesh" uid="uid://cx56dig3gyfdd" path="res://Assets/square1_mesh.tres" id="1_mu0s7"]
[ext_resource type="Script" uid="uid://dgn643qf7qhxf" path="res://Scripts/square.gd" id="2_2jr70"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2jr70"]
size = Vector3(1, 0.1, 1)

[node name="Square" type="MeshInstance3D"]
mesh = ExtResource("1_mu0s7")
script = ExtResource("2_2jr70")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("BoxShape3D_2jr70")

[node name="Analysis" type="Node3D" parent="."]

[connection signal="input_event" from="Area3D" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_mouse_exited"]
